fix overflowing of 'post comment' mobile.

--- a/sass/main-pane.sass
+++ b/sass/main-pane.sass
@@ -109,7 +109,7 @@ $mobile-max: 640px
         .comment_submit
             text-align: right
             input
-                width: 40%
+                width: 13em
                 height: 2em
         .comment_content textarea
             height: 130px
